--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -602,6 +602,9 @@ ca:
       task: "Define what needs to be done by commenting. Assign this task to somebody. Post updates. Attach results." #####
     edit:
       submit: Guardar
+    ####
+    actions:
+      confirm_delete: Are you sure you want to delete this comment?
   example_projects:
     new:
       learn: Projecte Tutorial
