--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -603,6 +603,9 @@ de:
       task: "Define what needs to be done by commenting. Assign this task to somebody. Post updates. Attach results." #####
     edit:
       submit: Speichern
+    ####
+    actions:
+      confirm_delete: Are you sure you want to delete this comment?
   example_projects:
     new:
       learn: Lernen Sie an einem Beispiel!
