--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -591,6 +591,8 @@ en:
       task: "Define what needs to be done by commenting. Assign this task to somebody. Post updates. Attach results."
     edit:
       submit: Save
+    actions:
+      confirm_delete: Are you sure you want to delete this comment?
   example_projects:
     new:
       learn: Learn by example!
