--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -598,6 +598,9 @@ es:
       task: "Define qué debe hacerse en un comentario. Asigna un responsable. Publica actualizaciones. Adjunta resultados."
     edit:
       submit: Guardar
+    ####
+    actions:
+      confirm_delete: Are you sure you want to delete this comment?
   example_projects:
     new:
       learn: Proyecto Tutorial
