--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -592,6 +592,9 @@ fr:
       task: Définir ce qui doit être fait par un commentaire. Confier cette tâche à quelqu'un. Poster des mises à jour. Attacher les résultats.
     edit:
       submit: Enregistrer
+    ####
+    actions:
+      confirm_delete: Are you sure you want to delete this comment?
   example_projects:
     new:
       learn: Apprenez par l'exemple
