--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -602,6 +602,9 @@ it:
       task: "Define what needs to be done by commenting. Assign this task to somebody. Post updates. Attach results." #####
     edit:
       submit: Salva
+    ####
+    actions:
+      confirm_delete: Are you sure you want to delete this comment?
   example_projects:
     new:
       learn: Progetto Tutorial
