--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -18,6 +18,8 @@ de:
     comment:
       one: "{{count}} Kommentar"
       other: "{{count}} Kommentare"
+    ####
+    not_allowed: You are not allowed to do that!
   confirm:
     delete_task_list: "Sind Sie sicher, dass Sie diese Aufgabenliste löschen wollen?"
     delete_task: "Sind Sie sicher, dass Sie diese Aufgabe löschen wollen?"
@@ -604,6 +606,8 @@ de:
     edit:
       submit: Speichern
     ####
+    errors:
+      cannot_update: You do not have permission to update this comment
     actions:
       confirm_delete: Are you sure you want to delete this comment?
   example_projects:
