--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,6 +18,7 @@ en:
     comment:
       one: "{{count}} comment"
       other: "{{count}} comments"
+    not_allowed: You are not allowed to do that!
   confirm:
     delete_task_list: Are you sure you want to delete this task list?
     delete_task: Are you sure you want to delete this task?
@@ -591,6 +592,8 @@ en:
       task: "Define what needs to be done by commenting. Assign this task to somebody. Post updates. Attach results."
     edit:
       submit: Save
+    errors:
+      cannot_update: You do not have permission to update this comment
     actions:
       confirm_delete: Are you sure you want to delete this comment?
   example_projects:
