--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -18,6 +18,8 @@ fr:
     comment:
       one: "{{count}} commentaire"
       other: "{{count}} commentaires"
+    ####
+    not_allowed: You are not allowed to do that!
   confirm:
     delete_task_list: Êtes-vous sûr de vouloir supprimer cette liste de tâches?
     delete_task: Êtes-vous sûr de vouloir supprimer cette tâche?
@@ -593,6 +595,8 @@ fr:
     edit:
       submit: Enregistrer
     ####
+    errors:
+      cannot_update: You do not have permission to update this comment
     actions:
       confirm_delete: Are you sure you want to delete this comment?
   example_projects:
