--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -18,6 +18,8 @@ it:
     comment:
       one: "{{count}} commento"
       other: "{{count}} commenti"
+    ####
+    not_allowed: You are not allowed to do that!
   confirm:
     delete_task_list: Sicuro di voler cancellare questa lista di compiti?
     delete_task: Sicuro di voler cancellare questo compito?
@@ -603,6 +605,8 @@ it:
     edit:
       submit: Salva
     ####
+    errors:
+      cannot_update: You do not have permission to update this comment
     actions:
       confirm_delete: Are you sure you want to delete this comment?
   example_projects:
